button: fix end-aligned icon spacing (#83)

--- a/src/styles/button/index.css
+++ b/src/styles/button/index.css
@@ -30,7 +30,14 @@
 /* icon alignment */
 
 .button svg {
-  margin: var(--button-icon-margin);
+
+  &:first-child {
+    margin: var(--button-icon-start-margin);
+  }
+
+  &:last-child {
+    margin: var(--button-icon-end-margin);
+  }
 }
 
 /* button icon */
